fix scrollbar

--- a/front/src/index.scss
+++ b/front/src/index.scss
@@ -15,7 +15,7 @@ header.header {
 #root,
 body,
 html {
-	max-width: 99vw;
+	width: 99vw;
 	height: 100%;
 }
 
